Fix layout issue on Firefox

--- a/client/map.less
+++ b/client/map.less
@@ -81,7 +81,11 @@ html, body {
 
 .info {
   .name {
-    margin-bottom: 0;
+    margin-bottom: 4px;
+    display: block;
+  }
+  .btn {
+    float: right;
   }
 }
 
